Fix kepotong index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Overlay Streamlabs</title>
+  <title>Overlay Streamlabs 16:9</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Ganti src dengan nama file GIF atau PNG overlay kamu -->
+  <!-- Ganti src dengan file GIF/PNG overlay kamu -->
   <img src="overlay.gif" class="overlay" alt="Overlay">
 </body>
 </html>
