--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Overlay Streamlabs 16:9</title>
+  <title>Neatcill Overlay</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Ganti src dengan file GIF/PNG overlay kamu -->
-  <img src="overlay.gif" class="overlay" alt="Overlay">
+  <img src="overlay.gif" class="overlay" alt="Neatcill Overlay">
+
+
+  </div>
 </body>
 </html>
