--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neatcill Overlay</title>
+  <title>Overlay Streamlabs 1080p</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="overlay.gif" class="overlay" alt="Neatcill Overlay">
-
-
-  </div>
+  <img src="overlay.gif" class="overlay" alt="Overlay">
 </body>
 </html>
