--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Overlay Streamlabs 1080p</title>
+  <title>Overlay Stream 1080p</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
