--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Overlay Stream 1080p</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neatcill Overlay</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="overlay.gif" class="overlay" alt="Overlay">
+  <img src="overlay.gif" class="overlay" alt="Neatcill Overlay">
+
+  <!-- Contoh teks berjalan -->
+
+  </div>
 </body>
 </html>
