New gif index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="gif-overlay">
         <!-- GIF Background -->
-        <img src="overlay.gif" alt="Overlay GIF" class="gif-background">
+        <img src="5a0e9ef48cba4419a5832f665729c4e4.gif" alt="Overlay GIF" class="gif-background">
     </div>
 </body>
 </html>
