--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIF Overlay 16:9</title>
-    <link rel="stylesheet" href="style-gif.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <title>Overlay Streaming</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="gif-overlay">
-        <!-- GIF Background -->
-        <img src="5a0e9ef48cba4419a5832f665729c4e4.gif" alt="Overlay GIF" class="gif-background">
-    </div>
+  <img src="overlay.png" alt="Overlay Streaming" class="overlay">
 </body>
 </html>
