--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="overlay.png" alt="Overlay Streaming" class="overlay">
+  <img src="5a0e9ef48cba4419a5832f665729c4e4.gif" alt="Overlay Streaming" class="overlay">
 </body>
 </html>
